support for pages matching to multiple urls

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			<div id="api-tester">
 				
 		    	<!-- Main Content -->
+		    	<div id="tab-nav"></div>
 			    <div id="main"></div>
 	    	</div>
 	    	
