--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>API Tutor</title>
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -31,24 +31,15 @@
 
 
 	<main class="container-fluid">
-
-		<div class="col-md-12">
-			
-			<!-- API Tester -->
-			<div id="api-tester">
-				
-		    	<!-- Main Content -->
-		    	<div id="tab-nav"></div>
-			    <div id="main"></div>
-	    	</div>
-	    	
-	  	</div><!-- end first cell in row -->
+		<!-- Main Content -->
+	    <div id="main"></div>
 	</main>
 	
+	<!-- Side Panel -->
 	<div id="cd-cart" class="">
 		<i class="fa fa-pencil fa-2x fa-white block"></i>
 		<h2>Display Code</h2>
-		<textarea id="edit-template"></textarea>
+		<div id="edit-template"></div>
 		<br>
 		<textarea id="edit-style"></textarea>
 		<a href="#0" class="update-template">Update Template</a>
@@ -65,6 +56,9 @@
         }
     );
 </script>
-	
+<!-- api & ui code -->
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="http://code510.org/summer2015/api-tester/lib/js/main.js"></script>
+
 </body>
 </html>
