css & templates are quasi-editable

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="instagram.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	
 	<!-- codemirror styles -->
 	<link rel="stylesheet" href="lib/external/codemirror/lib/codemirror.css">
@@ -38,12 +38,8 @@
 	<!-- Side Panel -->
 	<div id="cd-cart" class="">
 		<i class="fa fa-pencil fa-2x fa-white block"></i>
-		<h2>Display Code</h2>
 		<div id="edit-template"></div>
-		<br>
-		<textarea id="edit-style"></textarea>
-		<a href="#0" class="update-template">Update Template</a>
-	</div> <!-- cd-cart -->
+	</div>
 
 
 <script src="lib/external/modernizr.js"></script>
