--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="lib/external/codemirror/theme/api-tester.css">
     <link rel="stylesheet" href="lib/external/codemirror/theme/neat.css">
     <link rel="stylesheet" href="lib/external/codemirror/addon/fold/foldgutter.css">
+    <link rel="stylesheet" href="lib/external/codemirror/addon/hint/show-hint.css">
     
     <style id="custom-styles"></style>
 </head>
