Finished Soundcloud updates (for now)

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 	    <div id="main">
 	    	<ul>
 	    		<li><a href="/instagram/">Instagram Tester</a></li>
+	    		<li><a href="/soundcloud/">SoundCloud Tester</a></li>
+	    		<li><a href="/twitter/">Twitter Tester</a></li>
 	    	</ul>
 	    </div>
 	</main>
